5_storage/5_2_nfs/app_with_nfs1/ingress-nfs.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nfs-test-ingress
  namespace: nfs-test
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    # old certmanager integration
    certmanager.k8s.io/cluster-issuer: "letsencrypt-practice"
    # new certmanager integration
    cert-manager.io/cluster-issuer: "letsencrypt-practice"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  tls:
    - hosts: 
      - nfs-test.mykubernetes.guru
      secretName: nfs-test-secret
  rules:
  - host: 'nfs-test.mykubernetes.guru'
    http:
      paths:
      - path: /
        backend:
          serviceName: nfs-test-service
          servicePort: 80
